--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,9 +1,6 @@
 {
-  "name": "tsconfig",
+  "name": "@story-protocol/tsconfig",
   "version": "0.0.0",
   "private": true,
-  "license": "MIT",
-  "publishConfig": {
-    "access": "public"
-  }
+  "main": "./base.json"
 }
