--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
   "scripts": {
     "build": "turbo run build",
     "lint": "turbo run lint",
-    "fix": "turbo run fix",
+    "fix": "turbo run lint:fix",
     "test": "turbo run test --no-cache",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "turbo run prettier"
   },
   "devDependencies": {
-    "prettier": "^3.0.3",
     "turbo": "^1.10.13"
   },
   "engines": {
