--- a/packages/eslint-config-story/package.json
+++ b/packages/eslint-config-story/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "@typescript-eslint/parser": "^6.2.0",
-    "eslint-config-prettier": "^8.10.0"
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-turbo": "^1.10.0"
   },
   "devDependencies": {
     "@story-protocol/prettier-config": "workspace:*",
