Add unit tests for StoryClient, FranchiseClient and utils functions (#7)
* Fix constructor issue

* Finish unit tests for StoryClient, FranchiseClient and util functions

* Formating and linting fixes

--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalEnv": ["API_BASE_URL", "FRANCHISE_REGISTRY_CONTRACT"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
