--- a/packages/core-sdk/package.json
+++ b/packages/core-sdk/package.json
@@ -16,13 +16,13 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "preconstruct build",
+    "build": "pnpm run fix && preconstruct build",
     "test": "TS_NODE_PROJECT='./tsconfig.test.json' c8 mocha -r ts-node/register './test/unit/**/*.test.ts'",
-    "test:integration": "TS_NODE_PROJECT='./tsconfig.test.json' c8 mocha -r ts-node/register './test/integration/**/*.test.ts' --timeout 30000",
+    "test:integration": "TS_NODE_PROJECT='./tsconfig.test.json' mocha -r ts-node/register './test/integration/**/*.test.ts' --timeout 30000",
     "fix": "pnpm run format:fix && pnpm run lint:fix && pnpm run tsc",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "lint:fix": "pnpm run eslint --fix",
+    "lint:fix": "pnpm run lint --fix",
     "lint": "eslint ./src",
     "tsc": "tsc --noEmit",
     "abigen": "typechain --target ethers-v5 './src/abi/**/*.json' --out-dir ./src/abi/generated"
@@ -31,14 +31,14 @@
   "dependencies": {
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
-    "axios": "^1.5.0",
-    "dotenv": "^16.0.3",
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "ethers": "^5.7.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.23.0",
     "@preconstruct/cli": "^2.8.1",
     "@story-protocol/eslint-config": "workspace:*",
     "@story-protocol/prettier-config": "workspace:*",
@@ -46,14 +46,15 @@
     "@typechain/ethers-v5": "^11.1.1",
     "@types/chai": "^4.3.6",
     "@types/mocha": "^10.0.2",
-    "@types/node": "^20.7.1",
+    "@types/node": "^20.8.2",
+    "@types/sinon": "^10.0.18",
     "c8": "^8.0.1",
     "chai": "^4.3.10",
-    "eslint": "^8.34.0",
+    "eslint": "^8.50.0",
     "ethers": "^5.7.2",
     "mocha": "^10.2.0",
-    "prettier": "^2.8.4",
-    "ts-mockito": "^2.6.1",
+    "prettier": "^2.8.8",
+    "sinon": "^16.0.0",
     "ts-node": "^10.9.1",
     "typechain": "^8.3.1",
     "typescript": "^5.2.2"
