--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "turbo run build",
     "lint": "turbo run lint",
-    "fix": "turbo run lint:fix",
+    "fix": "turbo run fix",
     "test": "turbo run test --no-cache",
     "format": "turbo run prettier"
   },
