--- a/packages/core-sdk/package.json
+++ b/packages/core-sdk/package.json
@@ -17,7 +17,8 @@
   ],
   "scripts": {
     "build": "pnpm run fix && preconstruct build",
-    "test": "TS_NODE_PROJECT='./tsconfig.test.json' c8 mocha -r ts-node/register './test/unit/**/*.test.ts'",
+    "test": "pnpm run test:unit && pnpm run test:integration",
+    "test:unit": "TS_NODE_PROJECT='./tsconfig.test.json' c8 mocha -r ts-node/register './test/unit/**/*.test.ts'",
     "test:integration": "TS_NODE_PROJECT='./tsconfig.test.json' mocha -r ts-node/register './test/integration/**/*.test.ts' --timeout 30000",
     "fix": "pnpm run format:fix && pnpm run lint:fix && pnpm run tsc",
     "format": "prettier --check .",
