--- a/packages/core-sdk/package.json
+++ b/packages/core-sdk/package.json
@@ -46,11 +46,13 @@
     "@story-protocol/tsconfig": "workspace:*",
     "@typechain/ethers-v5": "^11.1.1",
     "@types/chai": "^4.3.6",
+    "@types/chai-as-promised": "^7.1.6",
     "@types/mocha": "^10.0.2",
     "@types/node": "^20.8.2",
     "@types/sinon": "^10.0.18",
     "c8": "^8.0.1",
     "chai": "^4.3.10",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^8.50.0",
     "ethers": "^5.7.2",
     "mocha": "^10.2.0",
