--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalEnv": ["API_BASE_URL", "FRANCHISE_REGISTRY_CONTRACT"],
+  "globalEnv": ["API_BASE_URL", "FRANCHISE_REGISTRY_CONTRACT", "LICENSING_MODULE_CONTRACT"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
