Fix: add compilerOptions to tsconfig.json for mocha (#35)
* add tsconfig to address mocha test type errors

* remove import mocha

--- a/packages/core-sdk/tsconfig.json
+++ b/packages/core-sdk/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "resolveJsonModule": true,
     "module": "ESNext",
-    "outDir": "dist"
+    "outDir": "dist",
+    "types": ["mocha"]
   },
-  "include": ["./src"]
+  "include": ["src/**/*", "test/**/*"]
 }
