feat: add CollectClient resource (#23)
* Update turbo scripts for CI (#9)

* add initial unit tests

* fix: resolve missing environment variable

* fix: merge conflict

* chore: add integration test for list()

* fix: linting

* chore: update github workflow yaml

* chore: update github workflow yaml

* chore: add integration test for collect

* chore: un-skip collect.list test

* chore: remove basic-ci.yaml

* fix: missing dependency

---------

Co-authored-by: Ze <ze.huang@storyprotocol.xyz>

--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,11 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalEnv": ["API_BASE_URL", "FRANCHISE_REGISTRY_CONTRACT", "LICENSING_MODULE_CONTRACT"],
+  "globalEnv": [
+    "API_BASE_URL",
+    "FRANCHISE_REGISTRY_CONTRACT",
+    "LICENSING_MODULE_CONTRACT",
+    "COLLECT_MODULE_CONTRACT"
+  ],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
