--- a/.github/workflows/turbo-ci.yaml
+++ b/.github/workflows/turbo-ci.yaml
@@ -22,6 +22,7 @@ jobs:
       API_BASE_URL: ${{ secrets.API_BASE_URL }}
       FRANCHISE_REGISTRY_CONTRACT: ${{ secrets.FRANCHISE_REGISTRY_CONTRACT }}
       LICENSING_MODULE_CONTRACT: ${{ secrets.LICENSING_MODULE_CONTRACT }}
+      COLLECT_MODULE_CONTRACT: ${{ secrets.COLLECT_MODULE_CONTRACT }}
       RPC_PROVIDER_URL: ${{ secrets.RPC_PROVIDER_URL }}
       WALLET_PRIVATE_KEY: ${{ secrets.WALLET_PRIVATE_KEY }}
 
@@ -52,4 +53,3 @@ jobs:
 
       - name: Build
         run: pnpm build
-
