--- a/packages/core-sdk/.env.example
+++ b/packages/core-sdk/.env.example
@@ -2,6 +2,7 @@
 API_BASE_URL =  
 FRANCHISE_REGISTRY_CONTRACT = 
 COLLECT_MODULE_CONTRACT =
+LICENSING_MODULE_CONTRACT =
 
 # TEST CONFIGs
 RPC_PROVIDER_URL = 
