--- a/.github/workflows/turbo-ci.yaml
+++ b/.github/workflows/turbo-ci.yaml
@@ -21,6 +21,7 @@ jobs:
       # TURBO_TEAM: ${{ vars.TURBO_TEAM }}
       API_BASE_URL: ${{ secrets.API_BASE_URL }}
       FRANCHISE_REGISTRY_CONTRACT: ${{ secrets.FRANCHISE_REGISTRY_CONTRACT }}
+      RELATIONSHIP_MODULE_CONTRACT: ${{ secrets.RELATIONSHIP_MODULE_CONTRACT }}
       LICENSING_MODULE_CONTRACT: ${{ secrets.LICENSING_MODULE_CONTRACT }}
       COLLECT_MODULE_CONTRACT: ${{ secrets.COLLECT_MODULE_CONTRACT }}
       RPC_PROVIDER_URL: ${{ secrets.RPC_PROVIDER_URL }}
