--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,7 @@
   "globalEnv": [
     "API_BASE_URL",
     "FRANCHISE_REGISTRY_CONTRACT",
+    "RELATIONSHIP_MODULE_CONTRACT",
     "LICENSING_MODULE_CONTRACT",
     "COLLECT_MODULE_CONTRACT"
   ],
