--- a/packages/core-sdk/.env.example
+++ b/packages/core-sdk/.env.example
@@ -1,6 +1,7 @@
 # APP CONFIGs
 API_BASE_URL =  
 FRANCHISE_REGISTRY_CONTRACT = 
+RELATIONSHIP_MODULE_CONTRACT = 
 COLLECT_MODULE_CONTRACT =
 LICENSING_MODULE_CONTRACT =
 
