Add changeset and package versions (#49)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "turbo run test --no-cache"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "turbo": "^1.10.13"
   },
   "engines": {
