Support next env variables (#53)

--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,12 @@
     "FRANCHISE_REGISTRY_CONTRACT",
     "RELATIONSHIP_MODULE_CONTRACT",
     "LICENSING_MODULE_CONTRACT",
-    "COLLECT_MODULE_CONTRACT"
+    "COLLECT_MODULE_CONTRACT",
+    "NEXT_PUBLIC_API_BASE_URL",
+    "NEXT_PUBLIC_FRANCHISE_REGISTRY_CONTRACT",
+    "NEXT_PUBLIC_RELATIONSHIP_MODULE_CONTRACT",
+    "NEXT_PUBLIC_LICENSING_MODULE_CONTRACT",
+    "NEXT_PUBLIC_COLLECT_MODULE_CONTRACT"
   ],
   "pipeline": {
     "build": {
