Create mvp release branch (#63)
* Fix IDE errors (#13)

* Add CI (#16)

* Update franchise tests (#24)

* Added functionality to list all franchises for a user (#18)

* Added functionality to list all franchises for a user

* Fixed integration tests

* Making changes from PR review, comments and replacing throws

* Remove erroneous space

GitHub decided to add an extra space that just doesn't exist in my code locally.

* Update package.json, remove chai

* feat: Add configure franchise function (#27)

* Fix: Update test franchise id (#28)

* Update CI (#29)

* Update CI

* Update workflow trigger

* Update pnpm and node version

* Update Docker CI

* Remove docker CI

---------

Co-authored-by: Bruce <bruce@storyprotocol.xyz>

* Fix: add compilerOptions to tsconfig.json for mocha (#35)

* add tsconfig to address mocha test type errors

* remove import mocha

* feat: add transactions client (#31)

* feat: add TransactionClient class
* feat: add transaction in StoryClient. Add integration tests
* fix: address PR comments

* feat: Add LicenseClient (#20)

* license initial commit

* WIP: license stuff

* add license registry with createLicense

* update test for license

* update license test

* update license test

* update license test to use chai-as-promise

* add TODO comments as reminder

* fix unit test with integer test

* use string as type for ids

* update types and update with new api url

* update test constants

* fix integration test by adding getLicenseIdByTokenId to get parentLicenseId

* remove basic-ci.yaml

* clean up comments

* fix license

* remove defaults for required params

* add license to client.test.ts

* add dynamic params to list

* chore: add transaction client instantiation unit test (#38)

* feat: add CollectClient resource (#23)

* Update turbo scripts for CI (#9)

* add initial unit tests

* fix: resolve missing environment variable


--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build": "turbo run build",
     "lint": "turbo run lint",
     "fix": "turbo run fix",
-    "test": "turbo run test --no-cache",
-    "format": "turbo run prettier"
+    "test": "turbo run test --no-cache"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "turbo": "^1.10.13"
   },
   "engines": {
