--- a/packages/core-sdk/package.json
+++ b/packages/core-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@story-protocol/core-sdk",
-  "version": "0.0.0",
+  "version": "0.1.0-rc.7",
   "description": "Story Protocol Core SDK",
   "main": "dist/story-protocol-core-sdk.cjs.js",
   "module": "dist/story-protocol-core-sdk.esm.js",
@@ -46,11 +46,13 @@
     "@story-protocol/tsconfig": "workspace:*",
     "@typechain/ethers-v5": "^11.1.1",
     "@types/chai": "^4.3.6",
+    "@types/chai-as-promised": "^7.1.6",
     "@types/mocha": "^10.0.2",
     "@types/node": "^20.8.2",
     "@types/sinon": "^10.0.18",
     "c8": "^8.0.1",
     "chai": "^4.3.10",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^8.50.0",
     "ethers": "^5.7.2",
     "mocha": "^10.2.0",
