--- a/.github/workflows/external-pr.yaml
+++ b/.github/workflows/external-pr.yaml
@@ -1,13 +1,17 @@
-name: External PR Secure
+name: External PR
 
-on:
-  workflow_run:
-    workflows: ["External PR Insecure"]
-    types:
-      - completed
+on: 
+  pull_request_target:
+    types: [opened, synchronize]
 
 jobs:
+  authorize:
+    environment: 'external'
+    runs-on: ubuntu-latest
+    steps:
+      - run: true
   build_and_test:
+    needs: authorize
     uses: ./.github/workflows/build-and-test.yaml 
     secrets:
       api_base_url: ${{ secrets.API_BASE_URL }} 
@@ -17,3 +21,4 @@ jobs:
       COLLECT_MODULE_CONTRACT: ${{ secrets.COLLECT_MODULE_CONTRACT }}
       RPC_PROVIDER_URL: ${{ secrets.RPC_PROVIDER_URL }}
       WALLET_PRIVATE_KEY: ${{ secrets.WALLET_PRIVATE_KEY }}
+  
