--- a/.github/workflows/external-pr.yaml
+++ b/.github/workflows/external-pr.yaml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   authorize:
+    if: github.event.pull_request.head.repo.full_name != github.repository
     environment: 'external'
     runs-on: ubuntu-latest
     steps:
