Added platform API for upload file (#76)
* working file upload, polish work in progress

* added readme

* working file upload function

* working file upload e2e

* upgrade node 20 and fix lint issue

---------

Co-authored-by: Rex Ren <renxiaoxiang32@gmail.com>

--- a/packages/core-sdk/tsconfig.json
+++ b/packages/core-sdk/tsconfig.json
@@ -4,7 +4,8 @@
     "resolveJsonModule": true,
     "module": "ESNext",
     "outDir": "dist",
-    "types": ["mocha"]
+    "types": ["mocha"],
+    "lib": ["dom"]
   },
   "include": ["src/**/*", "test/**/*"]
 }
