Add husky pre-push hook and fix lint before smelly code got out (#78)
* added husky and pre-push hook to fix code formatting

* remove unwanted pre commit hook

---------

Co-authored-by: Rex Ren <renxiaoxiang32@gmail.com>

--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "build": "turbo run build",
     "lint": "turbo run lint",
     "fix": "turbo run fix",
-    "test": "turbo run test --no-cache"
+    "test": "turbo run test --no-cache",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
-    "turbo": "^1.10.13"
+    "turbo": "^1.10.13",
+    "husky": "^8.0.0"
   },
   "engines": {
     "node": "^20.0.0"
