--- a/turbo.json
+++ b/turbo.json
@@ -2,15 +2,17 @@
   "$schema": "https://turbo.build/schema.json",
   "globalEnv": [
     "API_BASE_URL",
-    "FRANCHISE_REGISTRY_CONTRACT",
+    "IPORG_REGISTRY_CONTRACT",
     "RELATIONSHIP_MODULE_CONTRACT",
     "LICENSING_MODULE_CONTRACT",
     "COLLECT_MODULE_CONTRACT",
+    "IPASSSET_REGISTRY_CONTRACT",
     "NEXT_PUBLIC_API_BASE_URL",
-    "NEXT_PUBLIC_FRANCHISE_REGISTRY_CONTRACT",
+    "NEXT_PUBLIC_IPORG_REGISTRY_CONTRACT",
     "NEXT_PUBLIC_RELATIONSHIP_MODULE_CONTRACT",
     "NEXT_PUBLIC_LICENSING_MODULE_CONTRACT",
-    "NEXT_PUBLIC_COLLECT_MODULE_CONTRACT"
+    "NEXT_PUBLIC_COLLECT_MODULE_CONTRACT",
+    "NEXT_PUBLIC_IPASSSET_REGISTRY_CONTRACT"
   ],
   "pipeline": {
     "build": {
