--- a/.github/workflows/internal-pr.yaml
+++ b/.github/workflows/internal-pr.yaml
@@ -14,8 +14,10 @@ jobs:
   build_and_test:
     if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
     uses: ./.github/workflows/build-and-test.yaml 
+    with: 
+      sha: ${{ github.event.pull_request.head.sha }}
     secrets:
-      api_base_url: ${{ secrets.API_BASE_URL }} 
+      API_BASE_URL: ${{ secrets.API_BASE_URL }} 
       FRANCHISE_REGISTRY_CONTRACT: ${{ secrets.FRANCHISE_REGISTRY_CONTRACT }}
       RELATIONSHIP_MODULE_CONTRACT: ${{ secrets.RELATIONSHIP_MODULE_CONTRACT }}
       LICENSING_MODULE_CONTRACT: ${{ secrets.LICENSING_MODULE_CONTRACT }}
