--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -9,13 +9,19 @@ on:
     secrets:
       API_BASE_URL:
         required: true
-      FRANCHISE_REGISTRY_CONTRACT:
+      STORY_PROTOCOL_CONTRACT:
+        required: true
+      IP_ASSET_REGISTRY_CONTRACT:
+        required: true
+      IP_ORG_CONTROLLER_CONTRACT:
         required: true
       RELATIONSHIP_MODULE_CONTRACT:
         required: true
-      LICENSING_MODULE_CONTRACT:
+      REGISTRATION_MODULE_CONTRACT:
         required: true
-      COLLECT_MODULE_CONTRACT:
+      LICENSE_REGISTRY_CONTRACT:
+        required: true
+      MODULE_REGISTRY_CONTRACT:
         required: true
       RPC_PROVIDER_URL:
         required: true
@@ -32,10 +38,13 @@ jobs:
       # TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       # TURBO_TEAM: ${{ vars.TURBO_TEAM }}
       NEXT_PUBLIC_API_BASE_URL: ${{ secrets.API_BASE_URL }}
-      NEXT_PUBLIC_FRANCHISE_REGISTRY_CONTRACT: ${{ secrets.FRANCHISE_REGISTRY_CONTRACT }}
+      NEXT_PUBLIC_STORY_PROTOCOL_CONTRACT: ${{ secrets.STORY_PROTOCOL_CONTRACT }}
+      NEXT_PUBLIC_IP_ASSET_REGISTRY_CONTRACT: ${{ secrets.IP_ASSET_REGISTRY_CONTRACT }} 
+      NEXT_PUBLIC_IP_ORG_CONTROLLER_CONTRACT: ${{ secrets.IP_ORG_CONTROLLER_CONTRACT }}
       NEXT_PUBLIC_RELATIONSHIP_MODULE_CONTRACT: ${{ secrets.RELATIONSHIP_MODULE_CONTRACT }}
-      NEXT_PUBLIC_LICENSING_MODULE_CONTRACT: ${{ secrets.LICENSING_MODULE_CONTRACT }}
-      NEXT_PUBLIC_COLLECT_MODULE_CONTRACT: ${{ secrets.COLLECT_MODULE_CONTRACT }}
+      NEXT_PUBLIC_REGISTRATION_MODULE_CONTRACT: ${{ secrets.REGISTRATION_MODULE_CONTRACT }}
+      NEXT_PUBLIC_LICENSE_REGISTRY_CONTRACT: ${{ secrets.LICENSE_REGISTRY_CONTRACT }}
+      NEXT_PUBLIC_MODULE_REGISTRY_CONTRACT: ${{ secrets.MODULE_REGISTRY_CONTRACT }}
       RPC_PROVIDER_URL: ${{ secrets.RPC_PROVIDER_URL }}
       WALLET_PRIVATE_KEY: ${{ secrets.WALLET_PRIVATE_KEY }}
 
