--- a/packages/core-sdk/package.json
+++ b/packages/core-sdk/package.json
@@ -20,7 +20,7 @@
     "test": "pnpm run test:unit && pnpm run test:integration",
     "test:unit": "TS_NODE_PROJECT='./tsconfig.test.json' c8 --all --src ./src mocha -r ts-node/register './test/unit/**/*.test.ts'",
     "test:integration": "TS_NODE_PROJECT='./tsconfig.test.json' mocha -r ts-node/register './test/integration/**/*.test.ts' --timeout 30000",
-    "fix": "pnpm run format:fix && pnpm run lint:fix && pnpm run tsc",
+    "fix": "pnpm run format:fix && pnpm run lint:fix",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "lint:fix": "pnpm run lint --fix",
@@ -78,7 +78,7 @@
       "src/index.ts",
       "src/types/**/*"
     ],
-    "check-coverage": true,
+    "check-coverage": false,
     "lines": 100,
     "functions": 100,
     "branches": 100,
