--- a/turbo.json
+++ b/turbo.json
@@ -2,17 +2,13 @@
   "$schema": "https://turbo.build/schema.json",
   "globalEnv": [
     "API_BASE_URL",
-    "IPORG_REGISTRY_CONTRACT",
-    "RELATIONSHIP_MODULE_CONTRACT",
-    "LICENSING_MODULE_CONTRACT",
-    "COLLECT_MODULE_CONTRACT",
-    "IPASSSET_REGISTRY_CONTRACT",
+    "STORY_PROTOCOL_CONTRACT",
+    "IP_ORG_CONTROLLER_CONTRACT",
+    "REGISTRATION_MODULE_CONTRACT",
     "NEXT_PUBLIC_API_BASE_URL",
-    "NEXT_PUBLIC_IPORG_REGISTRY_CONTRACT",
-    "NEXT_PUBLIC_RELATIONSHIP_MODULE_CONTRACT",
-    "NEXT_PUBLIC_LICENSING_MODULE_CONTRACT",
-    "NEXT_PUBLIC_COLLECT_MODULE_CONTRACT",
-    "NEXT_PUBLIC_IPASSSET_REGISTRY_CONTRACT"
+    "NEXT_PUBLIC_STORY_PROTOCOL_CONTRACT",
+    "NEXT_PUBLIC_IP_ORG_CONTROLLER_CONTRACT",
+    "NEXT_PUBLIC_REGISTRATION_MODULE_CONTRACT"
   ],
   "pipeline": {
     "build": {
