--- a/packages/core-sdk/package.json
+++ b/packages/core-sdk/package.json
@@ -78,7 +78,7 @@
       "src/index.ts",
       "src/types/**/*"
     ],
-    "check-coverage": false,
+    "check-coverage": true,
     "lines": 100,
     "functions": 100,
     "branches": 100,
