--- a/.github/workflows/external-pr.yaml
+++ b/.github/workflows/external-pr.yaml
@@ -25,6 +25,6 @@ jobs:
       REGISTRATION_MODULE_CONTRACT: ${{ secrets.REGISTRATION_MODULE_CONTRACT_ALPHA }}
       LICENSE_REGISTRY_CONTRACT: ${{ secrets.LICENSE_REGISTRY_CONTRACT_ALPHA }}
       MODULE_REGISTRY_CONTRACT: ${{ secrets.MODULE_REGISTRY_CONTRACT_ALPHA }}
-      RPC_PROVIDER_URL: ${{ secrets.RPC_PROVIDER_URL }}
+      RPC_PROVIDER_URL: ${{ secrets.RPC_PROVIDER_URL_SEPOLIA }}
       WALLET_PRIVATE_KEY: ${{ secrets.WALLET_PRIVATE_KEY }}
   
