--- a/turbo.json
+++ b/turbo.json
@@ -4,10 +4,14 @@
     "API_BASE_URL",
     "STORY_PROTOCOL_CONTRACT",
     "IP_ORG_CONTROLLER_CONTRACT",
+    "IP_ASSET_REGISTRY_CONTRACT",
+    "RELATIONSHIP_MODULE_CONTRACT",
     "REGISTRATION_MODULE_CONTRACT",
     "NEXT_PUBLIC_API_BASE_URL",
     "NEXT_PUBLIC_STORY_PROTOCOL_CONTRACT",
     "NEXT_PUBLIC_IP_ORG_CONTROLLER_CONTRACT",
+    "NEXT_PUBLIC_IP_ASSET_REGISTRY_CONTRACT",
+    "NEXT_PUBLIC_RELATIONSHIP_MODULE_CONTRACT",
     "NEXT_PUBLIC_REGISTRATION_MODULE_CONTRACT"
   ],
   "pipeline": {
