--- a/turbo.json
+++ b/turbo.json
@@ -7,12 +7,14 @@
     "IP_ASSET_REGISTRY_CONTRACT",
     "RELATIONSHIP_MODULE_CONTRACT",
     "REGISTRATION_MODULE_CONTRACT",
+    "LICENSE_REGISTRY_CONTRACT",
     "NEXT_PUBLIC_API_BASE_URL",
     "NEXT_PUBLIC_STORY_PROTOCOL_CONTRACT",
     "NEXT_PUBLIC_IP_ORG_CONTROLLER_CONTRACT",
     "NEXT_PUBLIC_IP_ASSET_REGISTRY_CONTRACT",
     "NEXT_PUBLIC_RELATIONSHIP_MODULE_CONTRACT",
-    "NEXT_PUBLIC_REGISTRATION_MODULE_CONTRACT"
+    "NEXT_PUBLIC_REGISTRATION_MODULE_CONTRACT",
+    "NEXT_PUBLIC_LICENSE_REGISTRY_CONTRACT"
   ],
   "pipeline": {
     "build": {
