Add pre-commit hook to fix formats (#119)

--- a/turbo.json
+++ b/turbo.json
@@ -21,7 +21,9 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
     },
-    "fix": {},
+    "fix": {
+      "cache": false
+    },
     "lint": {},
     "lint:fix": {},
     "test": {},
