Removed Environment from config // made RPC_PROVIDER_URL transport work by default without having to pass it in (#118)

--- a/turbo.json
+++ b/turbo.json
@@ -14,7 +14,8 @@
     "NEXT_PUBLIC_IP_ASSET_REGISTRY_CONTRACT",
     "NEXT_PUBLIC_RELATIONSHIP_MODULE_CONTRACT",
     "NEXT_PUBLIC_REGISTRATION_MODULE_CONTRACT",
-    "NEXT_PUBLIC_LICENSE_REGISTRY_CONTRACT"
+    "NEXT_PUBLIC_LICENSE_REGISTRY_CONTRACT",
+    "RPC_PROVIDER_URL"
   ],
   "pipeline": {
     "build": {
