--- a/packages/core-sdk/package.json
+++ b/packages/core-sdk/package.json
@@ -47,6 +47,7 @@
     "@types/mocha": "^10.0.2",
     "@types/node": "^20.8.2",
     "@types/sinon": "^10.0.18",
+    "@wagmi/cli": "^1.5.2",
     "c8": "^8.0.1",
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
